--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "UserDbContextConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Task4;Integrated Security=True"
+    "UserDbContextConnection": "Data Source=SQL8004.site4now.net;Initial Catalog=db_a93657_levivan;User Id=db_a93657_levivan_admin;Password=Oprysko82gUU"
   }
 }
